// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons|AddButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-default"
    onClick={[Function]}
    type="button"
  >
    <span
      className="icon is-medium"
    >
      <i
        className="fas fa-plus has-text-inherit"
      />
    </span>
    <span>
       
      Add
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|Button Colors 1`] = `
<div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-primary"
      onClick={[Function]}
      type="button"
    >
      primary
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-link"
      onClick={[Function]}
      type="button"
    >
      link
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-info"
      onClick={[Function]}
      type="button"
    >
      info
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-success"
      onClick={[Function]}
      type="button"
    >
      success
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-warning"
      onClick={[Function]}
      type="button"
    >
      warning
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-danger"
      onClick={[Function]}
      type="button"
    >
      danger
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-white"
      onClick={[Function]}
      type="button"
    >
      white
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-light"
      onClick={[Function]}
      type="button"
    >
      light
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-dark"
      onClick={[Function]}
      type="button"
    >
      dark
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-black"
      onClick={[Function]}
      type="button"
    >
      black
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-text"
      onClick={[Function]}
      type="button"
    >
      text
       
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons|Button Loading 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-primary is-loading"
    onClick={[Function]}
    type="button"
  >
     
    Loading Button
  </button>
</div>
`;

exports[`Storyshots Buttons|CreateButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <div
    className="sc-gzVnrw fzShco has-text-centered"
  >
    <button
      className="button is-primary"
      onClick={[Function]}
      type="button"
    >
       
      Create
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons|DeleteButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-warning"
    onClick={[Function]}
    type="button"
  >
    <span
      className="icon is-medium"
    >
      <i
        className="fas fa-times has-text-inherit"
      />
    </span>
    <span>
       
      Delete
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|DownloadButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <a
    className="button is-link"
    disabled={false}
    href=""
    onClick={[Function]}
  >
    <span
      className="icon is-medium"
    >
      <i
        className="fas fa-arrow-circle-down"
      />
    </span>
    <span>
      Download
    </span>
  </a>
</div>
`;

exports[`Storyshots Buttons|DownloadButton Disabled 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <a
    className="button is-link"
    disabled={true}
    href=""
    onClick={[Function]}
  >
    <span
      className="icon is-medium"
    >
      <i
        className="fas fa-arrow-circle-down"
      />
    </span>
    <span>
      Download
    </span>
  </a>
</div>
`;

exports[`Storyshots Buttons|EditButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-default"
    onClick={[Function]}
    type="button"
  >
     
    Edit
  </button>
</div>
`;

exports[`Storyshots Buttons|SubmitButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-primary"
    onClick={[Function]}
    type="submit"
  >
     
    Submit
  </button>
</div>
`;

exports[`Storyshots DateFromNow Default 1`] = `
<div>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2009-06-30 18:30:00"
    >
      over 10 years ago
    </time>
  </p>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2019-06-30 18:30:00"
    >
      3 months ago
    </time>
  </p>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2019-10-12 13:56:40"
    >
      less than a minute ago
    </time>
  </p>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2019-10-11 13:56:40"
    >
      1 day ago
    </time>
  </p>
</div>
`;

exports[`Storyshots Forms|Checkbox Default 1`] = `
<div
  className="sc-fBuWsC ldmpJA"
>
  <div
    className="field"
  >
    <div
      className="control"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
         
        Not checked
      </label>
    </div>
  </div>
  <div
    className="field"
  >
    <div
      className="control"
    >
      <label
        className="checkbox"
      >
        <input
          checked={true}
          onChange={[Function]}
          type="checkbox"
        />
         
        Checked
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms|Checkbox Disabled 1`] = `
<div
  className="sc-fBuWsC ldmpJA"
>
  <div
    className="field"
  >
    <div
      className="control"
    >
      <label
        className="checkbox"
        disabled={true}
      >
        <input
          checked={true}
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
         
        Checked but disabled
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms|Radio Default 1`] = `
<div
  className="sc-fMiknA keSQNk"
>
  <label
    className="radio"
  >
    <input
      checked={false}
      onChange={[Function]}
      type="radio"
    />
     
    Not checked
  </label>
  <label
    className="radio"
  >
    <input
      checked={true}
      onChange={[Function]}
      type="radio"
    />
     
    Checked
  </label>
</div>
`;

exports[`Storyshots Forms|Radio Disabled 1`] = `
<div
  className="sc-fMiknA keSQNk"
>
  <label
    className="radio"
    disabled={true}
  >
    <input
      checked={true}
      disabled={true}
      onChange={[Function]}
      type="radio"
    />
     
    Checked but disabled
  </label>
</div>
`;

exports[`Storyshots Forms|Textarea OnCancel 1`] = `
<div
  className="sc-dVhcbM ituOZx"
>
  <div
    className="field"
  >
    
    <div
      className="control"
    >
      <textarea
        className="textarea"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value="Use the escape key to clear the textarea"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms|Textarea OnChange 1`] = `
<div
  className="sc-dVhcbM ituOZx"
>
  <div
    className="field"
  >
    
    <div
      className="control"
    >
      <textarea
        className="textarea"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value="Start typing"
      />
    </div>
  </div>
  <hr />
  <p>
    Start typing
  </p>
</div>
`;

exports[`Storyshots Forms|Textarea OnSubmit 1`] = `
<div
  className="sc-dVhcbM ituOZx"
>
  <div
    className="field"
  >
    
    <div
      className="control"
    >
      <textarea
        className="textarea"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value="Use the ctrl/command + Enter to submit the textarea"
      />
    </div>
  </div>
  <hr />
  <p>
    
  </p>
</div>
`;

exports[`Storyshots Loading Default 1`] = `
<div>
  <div
    className="sc-bwzfXH fuRxdH is-flex"
  >
    <img
      alt="loading.alt"
      className="sc-htpNat bhQHKl"
      src="/images/loading.svg"
    />
    <p
      className="has-text-centered"
    />
  </div>
</div>
`;

exports[`Storyshots Logo Default 1`] = `
<div
  className="sc-bxivhb gXEZub"
>
  <img
    alt="logo.alt"
    src="/images/logo.png"
  />
</div>
`;

exports[`Storyshots MarkdownView Code without Lang 1`] = `
<div
  className="sc-EHOje lbpDzp"
>
  <div
    className="sc-ifAKCX frmxmY"
  >
    <div
      className="content"
    >
      <p>
        Here is markdown with code, but without Language.
      </p>
      <pre
        style={
          Object {
            "background": "#FFFFFF",
            "color": "#434f54",
            "display": "block",
            "overflowX": "auto",
            "padding": "0.5em",
          }
        }
      >
        <code>
          Code without Language!
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`Storyshots MarkdownView Default 1`] = `
<div
  className="sc-EHOje lbpDzp"
>
  <div
    className="sc-ifAKCX frmxmY"
  >
    <div
      className="content"
    >
      <h1>
        <a
          name="top"
        />
        Markdown Test Page
      </h1>
      <ul>
        <li>
          <a
            href="#Headings"
          >
            Headings
          </a>
        </li>
        <li>
          <a
            href="#Paragraphs"
          >
            Paragraphs
          </a>
        </li>
        <li>
          <a
            href="#Blockquotes"
          >
            Blockquotes
          </a>
        </li>
        <li>
          <a
            href="#Lists"
          >
            Lists
          </a>
        </li>
        <li>
          <a
            href="#Horizontal"
          >
            Horizontal rule
          </a>
        </li>
        <li>
          <a
            href="#Table"
          >
            Table
          </a>
        </li>
        <li>
          <a
            href="#Code"
          >
            Code
          </a>
        </li>
        <li>
          <a
            href="#Inline"
          >
            Inline elements
          </a>
        </li>
      </ul>
      <hr />
      <h1>
        <a
          name="Headings"
        />
        Headings
      </h1>
      <h1>
        Heading one
      </h1>
      <p>
        Sint sit cillum pariatur eiusmod nulla pariatur ipsum. Sit laborum anim qui mollit tempor pariatur nisi minim dolor. Aliquip et adipisicing sit sit fugiat commodo id sunt. Nostrud enim ad commodo incididunt cupidatat in ullamco ullamco Lorem cupidatat velit enim et Lorem. Ut laborum cillum laboris fugiat culpa sint irure do reprehenderit culpa occaecat. Exercitation esse mollit tempor magna aliqua in occaecat aliquip veniam reprehenderit nisi dolor in laboris dolore velit.
      </p>
      <h2>
        Heading two
      </h2>
      <p>
        Aute officia nulla deserunt do deserunt cillum velit magna. Officia veniam culpa anim minim dolore labore pariatur voluptate id ad est duis quis velit dolor pariatur enim. Incididunt enim excepteur do veniam consequat culpa do voluptate dolor fugiat ad adipisicing sit. Labore officia est adipisicing dolore proident eiusmod exercitation deserunt ullamco anim do occaecat velit. Elit dolor consectetur proident sunt aliquip est do tempor quis aliqua culpa aute. Duis in tempor exercitation pariatur et adipisicing mollit irure tempor ut enim esse commodo laboris proident. Do excepteur laborum anim esse aliquip eu sit id Lorem incididunt elit irure ea nulla dolor et. Nulla amet fugiat qui minim deserunt enim eu cupidatat aute officia do velit ea reprehenderit.
      </p>
      <h3>
        Heading three
      </h3>
      <p>
        Voluptate cupidatat cillum elit quis ipsum eu voluptate fugiat consectetur enim. Quis ut voluptate culpa ex anim aute consectetur dolore proident voluptate exercitation eiusmod. Esse in do anim magna minim culpa sint. Adipisicing ipsum consectetur proident ullamco magna sit amet aliqua aute fugiat laborum exercitation duis et.
      </p>
      <h4>
        Heading four
      </h4>
      <p>
        Commodo fugiat aliqua minim quis pariatur mollit id tempor. Non occaecat minim esse enim aliqua adipisicing nostrud duis consequat eu adipisicing qui. Minim aliquip sit excepteur ipsum consequat laborum pariatur excepteur. Veniam fugiat et amet ad elit anim laborum duis mollit occaecat et et ipsum et reprehenderit. Occaecat aliquip dolore adipisicing sint labore occaecat officia fugiat. Quis adipisicing exercitation exercitation eu amet est laboris sunt nostrud ipsum reprehenderit ullamco. Enim sint ut consectetur id anim aute voluptate exercitation mollit dolore magna magna est Lorem. Ut adipisicing adipisicing aliqua ullamco voluptate labore nisi tempor esse magna incididunt.
      </p>
      <h5>
        Heading five
      </h5>
      <p>
        Veniam enim esse amet veniam deserunt laboris amet enim consequat. Minim nostrud deserunt cillum consectetur commodo eu enim nostrud ullamco occaecat excepteur. Aliquip et ut est commodo enim dolor amet sint excepteur. Amet ad laboris laborum deserunt sint sunt aliqua commodo ex duis deserunt enim est ex labore ut. Duis incididunt velit adipisicing non incididunt adipisicing adipisicing. Ad irure duis nisi tempor eu dolor fugiat magna et consequat tempor eu ex dolore. Mollit esse nisi qui culpa ut nisi ex proident culpa cupidatat cillum culpa occaecat anim. Ut officia sit ea nisi ea excepteur nostrud ipsum et nulla.
      </p>
      <h6>
        Heading six
      </h6>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p>
        <a
          href="#top"
        >
          [Top]
        </a>
      </p>
      <h1>
        <a
          name="Paragraphs"
        />
        Paragraphs
      </h1>
      <p>
        Incididunt ex adipisicing ea ullamco consectetur in voluptate proident fugiat tempor deserunt reprehenderit ullamco id dolore laborum. Do laboris laboris minim incididunt qui consectetur exercitation adipisicing dolore et magna consequat magna anim sunt. Officia fugiat Lorem sunt pariatur incididunt Lorem reprehenderit proident irure. Dolore ipsum aliqua mollit ad officia fugiat sit eu aliquip cupidatat ipsum duis laborum laborum fugiat esse. Voluptate anim ex dolore deserunt ea ex eiusmod irure. Occaecat excepteur aliqua exercitation aliquip dolor esse eu eu.
      </p>
      <p>
        Officia dolore laborum aute incididunt commodo nisi velit est est elit et dolore elit exercitation. Enim aliquip magna id ipsum aliquip consectetur ad nulla quis. Incididunt pariatur dolor consectetur cillum enim velit cupidatat laborum quis ex.
      </p>
      <p>
        Officia irure in non voluptate adipisicing sit amet tempor duis dolore deserunt enim ut. Reprehenderit incididunt in ad anim et deserunt deserunt Lorem laborum quis. Enim aute anim labore proident laboris voluptate elit excepteur in. Ex labore nulla velit officia ullamco Lorem Lorem id do. Dolore ullamco ipsum magna dolor pariatur voluptate ipsum id occaecat ipsum. Dolore tempor quis duis commodo quis quis enim.
      </p>
      <p>
        <a
          href="#top"
        >
          [Top]
        </a>
      </p>
      <h1>
        <a
          name="Blockquotes"
        />
        Blockquotes
      </h1>
      <p>
        Ad nisi laborum aute cupidatat magna deserunt eu id laboris id. Aliquip nulla cupidatat sint ex Lorem mollit laborum dolor amet est ut esse aute. Nostrud ex consequat id incididunt proident ipsum minim duis aliqua ut ex et ad quis. Laborum sint esse cillum anim nulla cillum consectetur aliqua sit. Nisi excepteur cillum labore amet excepteur commodo enim occaecat consequat ipsum proident exercitation duis id in.
      </p>
      <blockquote>
        <p>
          Ipsum et cupidatat mollit exercitation enim duis sunt irure aliqua reprehenderit mollit. Pariatur Lorem pariatur laboris do culpa do elit irure. Eiusmod amet nulla voluptate velit culpa et aliqua ad reprehenderit sit ut.
        </p>
      </blockquote>
      <p>
        Labore ea magna Lorem consequat aliquip consectetur cillum duis dolore. Et veniam dolor qui incididunt minim amet laboris sit. Dolore ad esse commodo et dolore amet est velit ut nisi ea. Excepteur ea nulla commodo dolore anim dolore adipisicing eiusmod labore id enim esse quis mollit deserunt est. Minim ea culpa voluptate nostrud commodo proident in duis aliquip minim.
      </p>
      <blockquote>
        <p>
          Qui est sit et reprehenderit aute est esse enim aliqua id aliquip ea anim. Pariatur sint reprehenderit mollit velit voluptate enim consectetur sint enim. Quis exercitation proident elit non id qui culpa dolore esse aliquip consequat.
        </p>
      </blockquote>
      <p>
        Ipsum excepteur cupidatat sunt minim ad eiusmod tempor sit.
      </p>
      <blockquote>
        <p>
          Deserunt excepteur adipisicing culpa pariatur cillum laboris ullamco nisi fugiat cillum officia. In cupidatat nulla aliquip tempor ad Lorem Lorem quis voluptate officia consectetur pariatur ex in est duis. Mollit id esse est elit exercitation voluptate nostrud nisi laborum magna dolore dolore tempor in est consectetur.
        </p>
      </blockquote>
      <p>
        Adipisicing voluptate ipsum culpa voluptate id aute laboris labore esse fugiat veniam ullamco occaecat do ut. Tempor et esse reprehenderit veniam proident ipsum irure sit ullamco et labore ea excepteur nulla labore ut. Ex aute minim quis tempor in eu id id irure ea nostrud dolor esse.
      </p>
      <p>
        <a
          href="#top"
        >
          [Top]
        </a>
      </p>
      <h1>
        <a
          name="Lists"
        />
        Lists
      </h1>
      <h3>
        Ordered List
      </h3>
      <ol>
        <li>
          Longan
        </li>
        <li>
          Lychee
        </li>
        <li>
          Excepteur ad cupidatat do elit laborum amet cillum reprehenderit consequat quis.
Deserunt officia esse aliquip consectetur duis ut labore laborum commodo aliquip aliquip velit pariatur dolore.
        </li>
        <li>
          Marionberry
        </li>
        <li>
          Melon
          <ul>
            <li>
              Cantaloupe
            </li>
            <li>
              Honeydew
            </li>
            <li>
              Watermelon
            </li>
          </ul>
        </li>
        <li>
          Miracle fruit
        </li>
        <li>
          Mulberry
        </li>
      </ol>
      <h3>
        Unordered List
      </h3>
      <ul>
        <li>
          Olive
        </li>
        <li>
          Orange
          <ul>
            <li>
              Blood orange
            </li>
            <li>
              Clementine
            </li>
          </ul>
        </li>
        <li>
          Papaya
        </li>
        <li>
          Ut aute ipsum occaecat nisi culpa Lorem id occaecat cupidatat id id magna laboris ad duis. Fugiat cillum dolore veniam nostrud proident sint consectetur eiusmod irure adipisicing.
        </li>
        <li>
          Passionfruit
        </li>
      </ul>
      <p>
        <a
          href="#top"
        >
          [Top]
        </a>
      </p>
      <h1>
        <a
          name="Horizontal"
        />
        Horizontal rule
      </h1>
      <p>
        In dolore velit aliquip labore mollit minim tempor veniam eu veniam ad in sint aliquip mollit mollit. Ex occaecat non deserunt elit laborum sunt tempor sint consequat culpa culpa qui sit. Irure ad commodo eu voluptate mollit cillum cupidatat veniam proident amet minim reprehenderit.
      </p>
      <hr />
      <p>
        In laboris eiusmod reprehenderit aliquip sit proident occaecat. Non sit labore anim elit veniam Lorem minim commodo eiusmod irure do minim nisi. Dolor amet cillum excepteur consequat sint non sint.
      </p>
      <p>
        <a
          href="#top"
        >
          [Top]
        </a>
      </p>
      <h1>
        <a
          name="Table"
        />
        Table
      </h1>
      <p>
        Duis sunt ut pariatur reprehenderit mollit mollit magna dolore in pariatur nulla commodo sit dolor ad fugiat. Laboris amet ea occaecat duis eu enim exercitation deserunt ea laborum occaecat reprehenderit. Et incididunt dolor commodo consequat mollit nisi proident non pariatur in et incididunt id. Eu ut et Lorem ea ex magna minim ipsum ipsum do.
      </p>
      <table>
        <thead>
          <tr>
            <th
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Table Heading 1
            </th>
            <th
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Table Heading 2
            </th>
            <th
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              Center align
            </th>
            <th
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Right align
            </th>
            <th
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Table Heading 5
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 1
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 2
            </td>
            <td
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              Item 3
            </td>
            <td
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Item 4
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 5
            </td>
          </tr>
          <tr>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 1
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 2
            </td>
            <td
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              Item 3
            </td>
            <td
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Item 4
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 5
            </td>
          </tr>
          <tr>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 1
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 2
            </td>
            <td
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              Item 3
            </td>
            <td
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Item 4
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 5
            </td>
          </tr>
          <tr>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 1
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 2
            </td>
            <td
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              Item 3
            </td>
            <td
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Item 4
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 5
            </td>
          </tr>
          <tr>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 1
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 2
            </td>
            <td
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              Item 3
            </td>
            <td
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Item 4
            </td>
            <td
              style={
                Object {
                  "textAlign": "left",
                }
              }
            >
              Item 5
            </td>
          </tr>
        </tbody>
      </table>
      <p>
        Minim id consequat adipisicing cupidatat laborum culpa veniam non consectetur et duis pariatur reprehenderit eu ex consectetur. Sunt nisi qui eiusmod ut cillum laborum Lorem officia aliquip laboris ullamco nostrud laboris non irure laboris. Cillum dolore labore Lorem deserunt mollit voluptate esse incididunt ex dolor.
      </p>
      <p>
        <a
          href="#top"
        >
          [Top]
        </a>
      </p>
      <h1>
        <a
          name="Code"
        />
        Code
      </h1>
      <h2>
        Inline code
      </h2>
      <p>
        Ad amet irure est magna id mollit Lorem in do duis enim. Excepteur velit nisi magna ea pariatur pariatur ullamco fugiat deserunt sint non sint. Duis duis est 
        <code>
          code in text
        </code>
         velit velit aute culpa ex quis pariatur pariatur laborum aute pariatur duis tempor sunt ad. Irure magna voluptate dolore consectetur consectetur irure esse. Anim magna 
        <code>
          &lt;strong&gt;in culpa qui officia&lt;/strong&gt;
        </code>
         dolor eiusmod esse amet aute cupidatat aliqua do id voluptate cupidatat reprehenderit amet labore deserunt.
      </p>
      <h2>
        Highlighted
      </h2>
      <p>
        Et fugiat ad nisi amet magna labore do cillum fugiat occaecat cillum Lorem proident. In sint dolor ullamco ad do adipisicing amet id excepteur Lorem aliquip sit irure veniam laborum duis cillum. Aliqua occaecat minim cillum deserunt magna sunt laboris do do irure ea nostrud consequat ut voluptate ex.
      </p>
      <pre
        style={
          Object {
            "background": "#FFFFFF",
            "color": "#434f54",
            "display": "block",
            "overflowX": "auto",
            "padding": "0.5em",
          }
        }
      >
        <code>
          package main

import (
    "fmt"
    "net/http"
)

func handler(w http.ResponseWriter, r *http.Request) {
    fmt.Fprintf(w, "Hi there, I love %s!", r.URL.Path[1:])
}

func main() {
    http.HandleFunc("/", handler)
    http.ListenAndServe(":8080", nil)
}
        </code>
      </pre>
      <p>
        Ex amet id ex aliquip id do laborum excepteur exercitation elit sint commodo occaecat nostrud est. Nostrud pariatur esse veniam laborum non sint magna sit laboris minim in id. Aliqua pariatur pariatur excepteur adipisicing irure culpa consequat commodo et ex id ad.
      </p>
      <p>
        <a
          href="#top"
        >
          [Top]
        </a>
      </p>
      <h1>
        <a
          name="Inline"
        />
        Inline elements
      </h1>
      <p>
        Sint ea anim ipsum ad commodo cupidatat do 
        <strong>
          exercitation
        </strong>
         incididunt et minim ad labore sunt. Minim deserunt labore laboris velit nulla incididunt ipsum nulla. Ullamco ad laborum ea qui et anim in laboris exercitation tempor sit officia laborum reprehenderit culpa velit quis. 
        <strong>
          Consequat commodo
        </strong>
         reprehenderit duis 
        <a
          href="#!"
        >
          irure
        </a>
         esse esse exercitation minim enim Lorem dolore duis irure. Nisi Lorem reprehenderit ea amet excepteur dolor excepteur magna labore proident voluptate ipsum. Reprehenderit ex esse deserunt aliqua ea officia mollit Lorem nulla magna enim. Et ad ipsum labore enim ipsum 
        <strong>
          cupidatat consequat
        </strong>
        . Commodo non ea cupidatat magna deserunt dolore ipsum velit nulla elit veniam nulla eiusmod proident officia.
      </p>
      <p>
        <img
          alt="Super wide"
          src="http://placekitten.com/1280/800"
        />
      </p>
      <p>
        <em>
          Proident sit veniam in est proident officia adipisicing
        </em>
         ea tempor cillum non cillum velit deserunt. Voluptate laborum incididunt sit consectetur Lorem irure incididunt voluptate nostrud. Commodo ut eiusmod tempor cupidatat esse enim minim ex anim consequat. Mollit sint culpa qui laboris quis consectetur ad sint esse. Amet anim anim minim ullamco et duis non irure. Sit tempor adipisicing ea laboris 
        <code>
          culpa ex duis sint
        </code>
         anim aute reprehenderit id eu ea. Aute 
        <a
          href="#!"
        >
          excepteur proident
        </a>
         Lorem minim adipisicing nostrud mollit ad ut voluptate do nulla esse occaecat aliqua sint anim.
      </p>
      <p>
        <img
          alt="Not so big"
          src="http://placekitten.com/480/400"
        />
      </p>
      <p>
        Incididunt in culpa cupidatat mollit cillum qui proident sit. In cillum aliquip incididunt voluptate magna amet cupidatat cillum pariatur sint aliqua est 
        <em>
          enim 
          <strong>
            anim
          </strong>
           voluptate
        </em>
        . Magna aliquip proident incididunt id duis pariatur eiusmod incididunt commodo culpa dolore sit. Culpa do nostrud elit ad exercitation anim pariatur non minim nisi 
        <strong>
          adipisicing sunt 
          <em>
            officia
          </em>
        </strong>
        . Do deserunt magna mollit Lorem commodo ipsum do cupidatat mollit enim ut elit veniam ea voluptate.
      </p>
      <p>
        <a
          href="https://youtu.be/s6bCmZmy9aQ"
        >
          <img
            alt="Manny Pacquiao"
            src="https://img.youtube.com/vi/s6bCmZmy9aQ/0.jpg"
          />
        </a>
      </p>
      <p>
        Reprehenderit non eu quis in ad elit esse qui aute id 
        <a
          href="#!"
        >
          incididunt
        </a>
         dolore cillum. Esse laboris consequat dolor anim exercitation tempor aliqua deserunt velit magna laboris. Culpa culpa minim duis amet mollit do quis amet commodo nulla irure.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots SyntaxHighlighter Go 1`] = `
<div
  className="sc-bZQynM hAJIOS"
>
  <pre
    style={
      Object {
        "background": "#FFFFFF",
        "color": "#434f54",
        "display": "block",
        "overflowX": "auto",
        "padding": "0.5em",
      }
    }
  >
    <code>
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        package
      </span>
       main


      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       (
  
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "fmt"
      </span>
      
  
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "net/http"
      </span>
      
)


      <span
        style={
          Object {
            "color": "#728E00",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          func
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          main
        </span>
        <span
          className="hljs-params"
          style={Object {}}
        >
          ()
        </span>
      </span>
       {
  http.HandleFunc(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "/"
      </span>
      , 
      <span
        style={
          Object {
            "color": "#728E00",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          func
        </span>
         
        <span
          className="hljs-params"
          style={Object {}}
        >
          (w http.ResponseWriter, r *http.Request)
        </span>
      </span>
       {
    fmt.Fprintf(w, 
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "Welcome to my website!"
      </span>
      )
  })

  fs := http.FileServer(http.Dir(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "static/"
      </span>
      ))
  http.Handle(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "/static/"
      </span>
      , http.StripPrefix(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "/static/"
      </span>
      , fs))

  http.ListenAndServe(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        ":80"
      </span>
      , 
      <span
        style={
          Object {
            "color": "#D35400",
          }
        }
      >
        nil
      </span>
      )
}

    </code>
  </pre>
</div>
`;

exports[`Storyshots SyntaxHighlighter Java 1`] = `
<div
  className="sc-bZQynM hAJIOS"
>
  <pre
    style={
      Object {
        "background": "#FFFFFF",
        "color": "#434f54",
        "display": "block",
        "overflowX": "auto",
        "padding": "0.5em",
      }
    }
  >
    <code>
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        package
      </span>
       com.example;


      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       java.io.IOException;

      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       java.io.OutputStream;

      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       java.net.InetSocketAddress;


      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       com.sun.net.httpserver.HttpExchange;

      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       com.sun.net.httpserver.HttpHandler;

      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       com.sun.net.httpserver.HttpServer;


      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        public
      </span>
       
      <span
        className="hljs-class"
        style={Object {}}
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          class
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          Test
        </span>
         
      </span>
      {

  
      <span
        style={
          Object {
            "color": "#728E00",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          public
        </span>
         
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          static
        </span>
         
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          void
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          main
        </span>
        <span
          className="hljs-params"
          style={Object {}}
        >
          (String[] args)
        </span>
         
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          throws
        </span>
         Exception 
      </span>
      {
    HttpServer server = HttpServer.create(
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        new
      </span>
       InetSocketAddress(
      <span
        style={
          Object {
            "color": "#8A7B52",
          }
        }
      >
        8000
      </span>
      ), 
      <span
        style={
          Object {
            "color": "#8A7B52",
          }
        }
      >
        0
      </span>
      );
    server.createContext(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "/test"
      </span>
      , 
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        new
      </span>
       MyHandler());
    server.setExecutor(
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        null
      </span>
      ); 
      <span
        style={
          Object {
            "color": "rgba(149,165,166,.8)",
          }
        }
      >
        // creates a default executor
      </span>
      
    server.start();
  }

  
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        static
      </span>
       
      <span
        className="hljs-class"
        style={Object {}}
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          class
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          MyHandler
        </span>
         
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          implements
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          HttpHandler
        </span>
         
      </span>
      {
    
      <span
        style={
          Object {
            "color": "#434f54",
          }
        }
      >
        @Override
      </span>
      
    
      <span
        style={
          Object {
            "color": "#728E00",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          public
        </span>
         
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          void
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          handle
        </span>
        <span
          className="hljs-params"
          style={Object {}}
        >
          (HttpExchange t)
        </span>
         
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          throws
        </span>
         IOException 
      </span>
      {
      String response = 
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "This is the response"
      </span>
      ;
      t.sendResponseHeaders(
      <span
        style={
          Object {
            "color": "#8A7B52",
          }
        }
      >
        200
      </span>
      , response.length());
      OutputStream os = t.getResponseBody();
      os.write(response.getBytes());
      os.close();
    }
  }

}

    </code>
  </pre>
</div>
`;

exports[`Storyshots SyntaxHighlighter Javascript 1`] = `
<div
  className="sc-bZQynM hAJIOS"
>
  <pre
    style={
      Object {
        "background": "#FFFFFF",
        "color": "#434f54",
        "display": "block",
        "overflowX": "auto",
        "padding": "0.5em",
      }
    }
  >
    <code>
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        var
      </span>
       http = 
      <span
        style={
          Object {
            "color": "#D35400",
          }
        }
      >
        require
      </span>
      (
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        'http'
      </span>
      );

http.createServer(
      <span
        style={
          Object {
            "color": "#728E00",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          function
        </span>
         (
        <span
          className="hljs-params"
          style={Object {}}
        >
          req, res
        </span>
        ) 
      </span>
      {
  res.writeHead(
      <span
        style={
          Object {
            "color": "#8A7B52",
          }
        }
      >
        200
      </span>
      , {
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        'Content-Type'
      </span>
      : 
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        'text/plain'
      </span>
      });
  res.write(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        'Hello World!'
      </span>
      );
  res.end();
}).listen(
      <span
        style={
          Object {
            "color": "#8A7B52",
          }
        }
      >
        8080
      </span>
      );

    </code>
  </pre>
</div>
`;

exports[`Storyshots SyntaxHighlighter Python 1`] = `
<div
  className="sc-bZQynM hAJIOS"
>
  <pre
    style={
      Object {
        "background": "#FFFFFF",
        "color": "#434f54",
        "display": "block",
        "overflowX": "auto",
        "padding": "0.5em",
      }
    }
  >
    <code>
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        from
      </span>
       BaseHTTPServer 
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        import
      </span>
       BaseHTTPRequestHandler,HTTPServer

PORT_NUMBER = 
      <span
        style={
          Object {
            "color": "#8A7B52",
          }
        }
      >
        8080
      </span>
      


      <span
        className="hljs-class"
        style={Object {}}
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          class
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          myHandler
        </span>
        <span
          className="hljs-params"
          style={Object {}}
        >
          (BaseHTTPRequestHandler)
        </span>
        :
      </span>
      

  
      <span
        style={
          Object {
            "color": "#728E00",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#00979D",
            }
          }
        >
          def
        </span>
         
        <span
          style={
            Object {
              "color": "#880000",
              "fontWeight": "bold",
            }
          }
        >
          do_GET
        </span>
        <span
          className="hljs-params"
          style={Object {}}
        >
          (self)
        </span>
        :
      </span>
      
    self.send_response(
      <span
        style={
          Object {
            "color": "#8A7B52",
          }
        }
      >
        200
      </span>
      )
    self.send_header(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        'Content-type'
      </span>
      ,
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        'text/html'
      </span>
      )
    self.end_headers()
    self.wfile.write(
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        "Hello World !"
      </span>
      )
    
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        return
      </span>
      


      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        try
      </span>
      :
  server = HTTPServer((
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        ''
      </span>
      , PORT_NUMBER), myHandler)
  
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        print
      </span>
       
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        'Started httpserver on port '
      </span>
       , PORT_NUMBER
  server.serve_forever()

      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        except
      </span>
       KeyboardInterrupt:
  
      <span
        style={
          Object {
            "color": "#00979D",
          }
        }
      >
        print
      </span>
       
      <span
        style={
          Object {
            "color": "#005C5F",
          }
        }
      >
        '^C received, shutting down the web server'
      </span>
      
  server.socket.close()

    </code>
  </pre>
</div>
`;

exports[`Storyshots Table|Table Default 1`] = `
<table
  className="sc-jhAzac hmXDXQ table content is-hoverable"
>
  <thead>
    <tr>
      <th
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        First Name
      </th>
      <th
        className="has-cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Last Name
        <i
          className="fas fa-sort-amount-down has-text-grey-light sc-hzDkRC escBde"
        />
      </th>
      <th
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        E-Mail
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <h4>
          Tricia
        </h4>
      </td>
      <td>
        <b
          style={
            Object {
              "color": "red",
            }
          }
        >
          McMillan
        </b>
      </td>
      <td>
        <a>
          tricia@hitchhiker.com
        </a>
      </td>
    </tr>
    <tr>
      <td>
        <h4>
          Arthur
        </h4>
      </td>
      <td>
        <b
          style={
            Object {
              "color": "red",
            }
          }
        >
          Dent
        </b>
      </td>
      <td>
        <a>
          arthur@hitchhiker.com
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Table|Table Empty 1`] = `
<div
  className="notification is-info"
>
  
  No data found.
</div>
`;

exports[`Storyshots Table|Table TextColumn 1`] = `
<table
  className="sc-jhAzac hmXDXQ table content is-hoverable"
>
  <thead>
    <tr>
      <th
        className="has-cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Id
        <i
          className="fas fa-sort-alpha-down has-text-grey-light sc-hzDkRC escBde"
        />
      </th>
      <th
        className="has-cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Name
        <i
          className="fas fa-sort-alpha-down has-text-grey-light sc-hzDkRC escBde"
        />
      </th>
      <th
        className="has-cursor-pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Description
        <i
          className="fas fa-sort-alpha-down has-text-grey-light sc-hzDkRC escBde"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        21
      </td>
      <td>
        Pommes
      </td>
      <td>
        Fried potato sticks
      </td>
    </tr>
    <tr>
      <td>
        42
      </td>
      <td>
        Quarter-Pounder
      </td>
      <td>
        Big burger
      </td>
    </tr>
    <tr>
      <td>
        -84
      </td>
      <td>
        Icecream
      </td>
      <td>
        Cold dessert
      </td>
    </tr>
  </tbody>
</table>
`;
